docker-registry-wide.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-wide
spec:
  type: NodePort
  selector:
    app: docker-registry
    release: registry
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
