ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  labels:
    app: helloapp
  name: helloapp
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: SVC_NAME
          servicePort: 8080
        path: /
