ingress_init.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  labels:
    app: mysampleapp
  name: mysampleapp
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: mysampleapp-562271c
          servicePort: 8080
        path: /
